--- a/BB.app/Contents/Info.plist
+++ b/BB.app/Contents/Info.plist
@@ -11,11 +11,11 @@
 	<key>CFBundleIconFile</key>
 	<string>PlayerIcon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>unity.DefaultCompany.BB</string>
+	<string>unity.Reid Scarboro.Bargain Bonsai</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>BB</string>
+	<string>Bargain Bonsai</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
